# QT_CLION_INTEGRATION

./: CMakeLists.txt  README.md  main.cpp
Form Files/LOAD_SCREEN/: testui.cpp  testui.h  testui.ui
